@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: ipmipower.8.in,v 1.65 2007-04-28 20:06:40 chu11 Exp $
+\."$Id: ipmipower.8.in,v 1.66 2007-04-29 16:40:07 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2003 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -50,25 +50,6 @@ interactive command line interface can be found below under
 INTERACTIVE COMMANDS.
 
 See EXAMPLES below for examples of how ipmipower is commonly used.
-
-.SH "IPMI over LAN"
-IPMI over LAN communicates with a remote machine by sending UDP
-packets under IPv4 to the remote machine's Baseboard Management
-Controller (BMC).  The BMC is typically communicated to through port
-623 of the the onboard ethernet NIC on the motherboard.  At this point
-in time,
-.B ipmipower 
-assumes all communication is done through port 623.
-
-Before any IPMI over LAN communication can take place, the remote
-machine's BMC must be configured properly.  Of primary importance, the
-IP address, MAC address, subnet, usernames, passwords, privileges,
-acceptable authentication types, and LAN enabled communication must be
-configured on the BMC.  Most power control commands require a
-privilege level of atleast OPERATOR.  The FreeIPMI tool
-.B bmc-config(1) 
-may be used to do this configuration.  A BMC configuration tool may
-have also been distributed with the machine.
 
 .SH "BASIC OPTIONS"
 The following options are the most common options used with  
@@ -590,25 +571,6 @@ when it is used in conjunction with powerman.  This will ensure
 .B ipmipower
 behaves similarly to other powerman devices.
 
-.SH "CLUSTER FOCUS"
-.B Ipmipower 
-has been developed to be especially useful for power controlling
-clusters; however, it may still be used to power control just one
-machine at a time.
-
-When used on a cluster,
-.B ipmipower 
-is programmed so that the time it takes to power control the cluster
-is the time it takes to power control the slowest node.  This is
-accomplished by parallelizing the establishment of IPMI sessions and
-the transmission of the actual power control command.  Remote machine
-discovery is also implemented so that time is not wasted trying to
-power control machines taken out of the cluster for servicing. When
-used in conjunction with powerman,
-.B ipmipower 
-has been used to consistently power control a 1024-node cluster in
-under 0.5 s.
-
 .SH "WORKAROUNDS"
 With so many different vendors implementing their
 own IPMI solutions, different vendors may implement their IPMI
@@ -679,11 +641,13 @@ specific workaround does not need to be specified.
 
 .SH "TROUBLESHOOTING"
 Most often, problems with ipmipower involve a misconfiguration of the
-remote machine's BMC.  Double check to make sure the following are
-configured properly in the remote machine's BMC: IP address, MAC
-address, subnet mask, username(s), password(s), allowed authentication
-type(s), atleast OPERATOR privilege level for one user, enabled LAN
-activity.
+remote machine's BMC.  The FreeIPMI tool
+.B bmc-config(1) 
+may be used to do this configuration.  Double check to make sure the
+following are configured properly in the remote machine's BMC: IP
+address, MAC address, subnet mask, username(s), password(s), allowed
+authentication type(s), atleast OPERATOR privilege level for one user,
+enabled LAN activity.
 
 When powering on a powered off machine, the client must have a means
 by which to resolve the MAC address of the remote machine's ethernet
