@@ -1,3 +1,7 @@
+2007-04-29  Albert Chu <chu11@llnl.gov>
+
+	* ipmipower/ipmipower.8.in: Fix text.
+	
 2007-04-28  Albert Chu <chu11@llnl.gov>
 
 	* doc/: Remove a whole bunch of unnecessary stuff.
